<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ShoppingActivity"
    >
    <item
        android:id="@+id/search_bar"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_search"
        android:title="@string/kereses"
        app:actionViewClass="android.widget.SearchView"
        android:textSize="@dimen/regular_text_size"
        >
    </item>
    <item
        android:id="@+id/cart"
        app:showAsAction="ifRoom"
        android:title="@string/kosar"
        android:icon="@drawable/icon_shopping_cart"
        app:actionLayout="@layout/shopping_cart"
        android:textSize="@dimen/regular_text_size"
        >
    </item>
    <item
        android:id="@+id/view_selector"
        app:showAsAction="ifRoom"
        android:title="@string/nezet"
        android:icon="@drawable/icon_view_grid"
        android:textSize="@dimen/regular_text_size"
        >
    </item>
    <item
        android:id="@+id/logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_exit"
        android:title="@string/kijelentkezes"
        android:orderInCategory="2"
        android:textSize="@dimen/regular_text_size">
    </item>
    <item
        android:id="@+id/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_settings"
        android:title="@string/beallitas"
        android:orderInCategory="1"
        android:textSize="@dimen/regular_text_size">
    </item>
</menu>