<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/regisztracio"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/userNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/regular_text_size"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTextView"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/userEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email_cim"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/regular_text_size"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEdit"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmailEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/jelszo"
        android:inputType="textPassword"
        android:textSize="@dimen/regular_text_size"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmailEdit"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/passwordAgainEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/jelszo_ujra"
        android:inputType="textPassword"
        android:textSize="@dimen/regular_text_size"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordAgainEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/telefonszam"
        android:inputType="phone"
        android:textSize="@dimen/regular_text_size"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordAgainEdit"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/addressEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/cim"
        android:inputType="textMultiLine|textPostalAddress"
        android:maxLines="3"
        android:textSize="@dimen/regular_text_size"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEdit"
        app:layout_constraintVertical_bias="0.067" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEdit"
        app:layout_constraintVertical_bias="0.203"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/accountTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:text="@string/fiok_tipus"
            android:textSize="@dimen/regular_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressEdit"
            app:layout_constraintVertical_bias="0.15"
            tools:layout_editor_absoluteX="0dp" />

        <RadioGroup
            android:id="@+id/accountTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountTypeText"
            app:layout_constraintVertical_bias="0.221">

            <RadioButton
                android:id="@+id/buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/vasarlo"
                android:checked="true"
                android:textSize="@dimen/regular_text_size" />

            <RadioButton
                android:id="@+id/seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elado"
                android:textSize="@dimen/regular_text_size" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.446">

        <Button
            android:layout_width="@dimen/reg_button_width"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/regisztracio"
            android:textSize="@dimen/regular_text_size" />

        <Button
            android:layout_width="@dimen/reg_button_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:onClick="cancel"
            android:text="@string/megse"
            android:textSize="@dimen/regular_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>