<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateActivity">
    <TextView
        android:id="@+id/updateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/szerkeszt_aru"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/updateInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/info"
        android:inputType="textMultiLine"
        android:textSize="@dimen/regular_text_size"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTextView"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/updatePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateInfo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/ar"
        android:textSize="@dimen/regular_text_size"
        android:inputType="number"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateInfo"
        app:layout_constraintVertical_bias="0.054"
        />

    <LinearLayout
        android:id="@+id/ratingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateInfo"
        app:layout_constraintVertical_bias="0.446">
        <RatingBar
            style="@android:style/Widget.DeviceDefault.RatingBar"
            android:id="@+id/updateRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/regular_text_size"
            android:windowSoftInputMode="stateVisible"
            android:clickable="true"
            android:focusable="true"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updatePrice"
            app:layout_constraintVertical_bias="0.048" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingLayout"
        app:layout_constraintVertical_bias="0.446">

        <Button
            android:layout_width="@dimen/reg_button_width"
            android:layout_height="wrap_content"
            android:onClick="update"
            android:text="@string/modositas_vegrehajt"
            android:textSize="@dimen/regular_text_size" />

        <Button
            android:layout_width="@dimen/reg_button_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:onClick="cancel"
            android:text="@string/megse"
            android:textSize="@dimen/regular_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>